name:                reshape
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/reshape#readme
license:             BSD3
license-file:        LICENSE
author:              Yukio Usuzumi
maintainer:          anohigisavay@gmail.com
copyright:           2017 Yukio Usuzumi
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Reshape.AST
                     , Language.Reshape.DataType
                     , Language.Reshape.Interpreter
                     , Language.Reshape.Lexer
                     , Language.Reshape.Parser
                     , Language.Reshape.Repl
                     , Language.Reshape.Runner
                     , Language.Reshape.Token
                     , Reshape.Engine.JSON
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , either-unwrap
                     , exceptions
                     , interpolate
                     , megaparsec
                     , mtl
                     , pretty-simple
                     , transformers
  default-language:    Haskell2010
  default-extensions:  AllowAmbiguousTypes
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , MultiParamTypeClasses
                     , RankNTypes
                     , RecordWildCards
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , TypeFamilies
                     , UndecidableInstances

executable reshape
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reshape
  default-language:    Haskell2010

test-suite reshape-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , reshape
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/reshape
